[package]
name = "mdbtools_rs"
version = "0.1.1"
authors = ["MGlolenstine <mglolenstine@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Simple mdbtools wrapper"
repository = "https://github.com/MGlolenstine/mdbtools-rs"
readme = "README.md"
keywords = ["db", "sqlite", "wrapper"]
exclude = [
    "Biblio.mdb"
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
